<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9999FF">
        
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/iv_descrip"
        android:layout_weight="1"></ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AAFFFFFF" >

        <Button
            android:id="@+id/button_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:background="#FFFFFF"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>